--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@
     position: relative;
     height: 100%;
     min-height: 500px;
-    background: linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url(../img/video.jpg);
+    background: linear-gradient(rgba(15, 23, 43, .1), rgba(15, 23, 43, .1)), url(../img/video.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -359,6 +359,7 @@
 
 .testimonial-carousel .testimonial-item {
     padding: 30px;
+    border-radius: 20px;
 }
 
 .testimonial-carousel .owl-nav {
@@ -417,13 +418,19 @@
 /*** Footer ***/
 .newsletter {
     position: relative;
-    z-index: 1;
+    z-index: 10;
 }
 
 .footer {
     position: relative;
     margin-top: -110px;
     padding-top: 180px;
+}
+
+/*** Contact Section ***/
+#contact {
+    position: relative;
+    z-index: 10;
 }
 
 .footer .btn.btn-social {
@@ -488,4 +495,33 @@
     margin-right: 0;
     padding-right: 0;
     border-right: none;
+}
+
+/*** Products ***/
+.room-item {
+    min-height: 550px;
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin: 0 auto;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.room-item .position-relative {
+    height: 650px;
+    overflow: hidden;
+    position: relative;
+}
+
+.room-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.room-item .position-absolute {
+    bottom: 10px;
+    left: 10px;
+    z-index: 10;
 }
